--- a/estilo/style.css
+++ b/estilo/style.css
@@ -21,7 +21,7 @@ body,html {
     background-color: white;
 }
 
-body #fale {
+body img#fale {
     position: absolute;
     right: 2%;
     bottom: 2%;
@@ -59,7 +59,8 @@ header > div#top a:hover{
 }
 
 header > img {
-    display: inline-block;
+    margin: auto;
+    display: block;
 }
 
 header > i#burguer {
@@ -87,10 +88,11 @@ header > menu > ul > li > a {
     display: block;
     background-color: var(--cor01);
     color: white;
+    font-size: 1.5em;
     text-decoration: none;
     text-align: center;
     padding: 10px;
-    border-top: 2px solid gray;
+    border-top: 2px solid var(--cor04);
 }
 
 header > menu > ul > li > a:hover {
