--- a/estilo/style.css
+++ b/estilo/style.css
@@ -22,16 +22,16 @@ body,html {
 }
 
 body img#fale {
-    position: absolute;
-    right: 2%;
-    bottom: 2%;
+    position: fixed;
+    right: 3%;
+    bottom: 3%;
     width: 40px;
     height: 40px;
     border-radius: 50px;
 }
 
 header {
-    background-color: #334863;
+    background-color: var(--cor01);
     color: white;
 }
 
@@ -45,7 +45,6 @@ header > div#top  a {
     text-decoration: none;
     display: block;
     font-size: 1.2em;
-    width: 100vw;
     color: white;
     cursor: pointer;
 }
@@ -80,6 +79,7 @@ header > i#burguer:hover {
 header > menu {
     display: none;
 }
+
 header > menu > ul {
     list-style-type: none;
 }
@@ -104,20 +104,21 @@ main{
     margin: 20px;
 }
 
-main > div > h1 {
+main > section#n7 > div > h1 {
     margin-bottom: 10px;
     text-align: center;
+    font-family: var(--fonte-padrao);
     font-size: 2.5em;
     color: var(--cor01);
 }
 
-main > div > p {
+main > section#n7 > div > p {
     text-align: center;
     font-size: 1.2em;
     margin-bottom: 5px;
 }
 
-main > div > a {
+main > section#n7 > div > a {
     display: block;
     margin: auto;
     padding: 8px;
@@ -132,16 +133,43 @@ main > div > a {
     border-radius: 50px;
 }
 
-main > div > a:hover {
+main > section#n7 > div > a:hover {
     background-color: #4e9b7c;
     color: white;
 }
 
-main > div > img {
+main > section#n7 > div > img {
+    width: 70vw;
     display: block;
     padding-top: 5px;
     margin: auto;
 }
+
+main > section#servicos > h2 {
+    margin: 10px;
+    font-family: var(--fonte-padrao);
+    font-size: 2em;
+    text-align: center;
+    color: #334863;
+}
+
+main > section#servicos > div.gro {
+    background: white url(../imagens/1.png) no-repeat;
+    background-size: cover;
+    background-position: center bottom;
+    display: block;
+    margin: auto;
+    padding-top: 40%;
+    width: 60vw;
+    border-radius: 10px;
+    border: 1px solid black;
+    overflow: hidden;
+}
+
+main > section#servicos > div.gro > h3 {
+    padding-top: 40%;
+}
+
 
 footer{
     background-color: var(--cor02);
