--- a/estilo/style.css
+++ b/estilo/style.css
@@ -153,21 +153,55 @@ main > section#servicos > h2 {
     color: #334863;
 }
 
-main > section#servicos > div.gro {
-    background: white url(../imagens/1.png) no-repeat;
-    background-size: cover;
-    background-position: center bottom;
+main > section#servicos > i#left {
+    position: absolute;
+    background-color: var(--cor01);
+    left: 7%;
+    color: white;
+    border-radius: 50px;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    font-size: 4em;
+} 
+
+main > section#servicos > i#right{
+    position: absolute;
+    background-color: var(--cor01);
+    right: 7%;
+    color: white;
+    border-radius: 50px;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    font-size: 4em;
+
+}
+
+main > section#servicos > div {
     display: block;
     margin: auto;
-    padding-top: 40%;
     width: 60vw;
     border-radius: 10px;
     border: 1px solid black;
     overflow: hidden;
 }
 
-main > section#servicos > div.gro > h3 {
-    padding-top: 40%;
+main > section#servicos > div >img{
+    width: 100%;
+}
+
+main > section#servicos > div > h3 {
+    font-size: 1.4em;
+    font-family: var(--fonte-padrao);
+    text-align: center;
+    margin: 8px;
+}
+
+main > section#servicos > div > p {
+    text-align: center;
+    font-size: 1.1em;
+    margin-bottom: 5px;
 }
 
 
