--- a/estilo/style.css
+++ b/estilo/style.css
@@ -190,7 +190,7 @@ main > section#servicos > article.galeria > div.fotos {
     overflow: hidden;
 }
 
-main > section#servicos > article.galeria > div.fotos > div {
+/* main > section#servicos > article.galeria > div.fotos > div {
     width: 99%;
     height: auto;
     position: absolute;
@@ -205,7 +205,7 @@ main > section#servicos > article.galeria > div.fotos > div {
 
 main > section#servicos > article.galeria > div.fotos > div.ativa{
     opacity: 1;
-}
+} */
 
 /* main > section#servicos > article.galeria > div.fotos > div {
     display: block;
